<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Registration"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="@string/register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUserType"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:hint="@string/user_type_hint">

        <Spinner
            android:id="@+id/userType_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_type_hint"
            style="@style/modifiedEditText"
            android:tooltipText="@string/user_type_hint"
            android:background="@drawable/edittextstyle"
            android:outlineAmbientShadowColor="@color/blue"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextUserName"
            style="@style/modifiedEditText"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLocation"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextUserEmail"
            style="@style/modifiedEditText"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        >

        <EditText
            android:id="@+id/editTextUserMobile"
            style="@style/modifiedEditText"
            android:hint="@string/user_mobile_number_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextUserPassword"
            style="@style/modifiedEditText"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextUserConfirmPassword"
            style="@style/modifiedEditText"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/edittextstyle"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddUser"
        style="@style/loginButton"
        android:text="@string/Save"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

