<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/welcome_app"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/linNewUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/newCoffee"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/bk_shop"
                    android:scaleType="centerCrop"/>

                <Button
                    android:id="@+id/btnNewCoffee"
                    style="@style/Button"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:text="@string/addcoffee" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/linNewCity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/newChallenge"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/chal" />

                <Button
                    android:id="@+id/btnAddChallenge"
                    style="@style/Button"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/addchallenge" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/BrowserCoff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_" />
</LinearLayout>